Répartition des tâches entre les membres de l'équipe et idées de rédaction.

--- a/qualite/specifications/1.introduction.tex
+++ b/qualite/specifications/1.introduction.tex
@@ -3,13 +3,20 @@
 
 % ----------- Contexte du projet -----------
 \section{Contexte du projet}
+\TODO{Céline}
 
-
+% On est en ASI4, on a cours d'info Rep et on doit faire un projet blablabla…
 
 % ----------- Principe général -----------
 \section{Principe général}
+\TODO{Céline}
 
-
+% On va faire un super projet de la mort trop cool sur un labyrinthe multijoueur blablabla…
 
 % ----------- Principales technologies utilisées -----------
 \section{Principales technologies utilisées}
+\TODO{Charlotte}
+
+% Ce que l'on a dit pdt la réunion, java, socket…
+% pourquoi c'est techno
+% avantage/inconvénient
