--- a/qualite/specifications/2.ihm.tex
+++ b/qualite/specifications/2.ihm.tex
@@ -4,14 +4,24 @@
 
 % ------------- Interface de l'écran d'accueil ------------
 \section{Interface de l'écran d'accueil}
+\TODO{Anthony}
+
+% description, comment fonctionne l'écran d'accueil et comment on interagit avec…
 
 % ------------- Gestion des parties ------------
 \subsection{Gestion des parties}
+\TODO{Anthony}
 
-
+% comment on peut faire pour jouer à une partie, création ou rejoindre…
 
 % ------------- Interface d'une partie en cours ------------
 \section{Interface d'une partie en cours}
+\TODO{Simon}
+
+% description de l'interface, pourquoi…
 
 % ------------- Gestion des déplacements ------------
 \subsection{Gestion des déplacements}
+\TODO{Simon}
+
+% comment sont gérer les déplacements humains ou bot
