--- a/qualite/specifications/3.communication_client_serveur.tex
+++ b/qualite/specifications/3.communication_client_serveur.tex
@@ -1,2 +1,5 @@
 % ============= Communication client-serveur ===============
 \chapter{Communication client-serveur}
+\TODO{Christophe}
+
+% qu'est ce qu'on envoie entre le client et le serveur, sous quelle forme et pourquoi faire…
