--- a/qualite/specifications/4.gestion_serveur.tex
+++ b/qualite/specifications/4.gestion_serveur.tex
@@ -1,2 +1,6 @@
 % ============= Gestion du serveur ===============
 \chapter{Gestion du serveur}
+
+\TODO{Alexandre}
+
+% comment le serveur gère le bazar et à quoi il sert…
