Introduction : contexte et principe

--- a/qualite/specifications/1.introduction.tex
+++ b/qualite/specifications/1.introduction.tex
@@ -7,11 +7,21 @@
 
 % On est en ASI4, on a cours d'info Rep et on doit faire un projet blablabla…
 
+Dans le cadre de notre formation au sein du département Architecture des Systèmes d'Information, un cours d'Informatique Répartie est dispensé. La réalisation d'un projet par groupes de 5 ou 6, au cours du semestre, a pour objectif de concevoir et développer un système réparti permettant de mettre en pratique les connaissances acquises en cours et en TD Machine. Un certain nombre de séances de TD sont dédiées à la réalisation de ce projet mais celui-ci nécessite également une recherche de solutions non-abordées ainsi qu'un travail personnel supplémentaire.
+
+Une soutenance aura lieu, en présence des autres étudiants, composée d'une présentation et d'une démonstration (ou vidéo).
+
+Il est indispensable que la solution mise en place soit une application distribuée. Le présent document de spécifications a valeur contractuelle et doit être respecté pour la suite du projet.
+
 % ----------- Principe général -----------
 \section{Principe général}
 \TODO{Céline}
 
 % On va faire un super projet de la mort trop cool sur un labyrinthe multijoueur blablabla…
+
+L'objectif de notre projet est de développer un serveur de tournois permettant à des IA et à des joueurs humains de s'affronter dans une arène.
+
+Nous avons choisi de développer un système distribué permettant à des joueurs de s'affronter dans des tournois de labyrinthes. Les joueurs sont placés au centre d'un labyrinthe et doivent en sortir. La partie est terminée lorsque qu'un joueur y parvient. Il est alors déclaré vainqueur.
 
 % ----------- Principales technologies utilisées -----------
 \section{Principales technologies utilisées}
