--- a/qualite/specifications/specifications.tex
+++ b/qualite/specifications/specifications.tex
@@ -75,7 +75,7 @@ citecolor=black,  %couleur des références
 \title{Javabyrinthe}
 
 \author{Alexandre \bsc{Brehmer}\\ Christophe \bsc{Cluizel} \\ Anthony \bsc{Courtin} \\ Céline \bsc{Leduc} \\ Charlotte \bsc{Touchard} \\ Simon \bsc{Wallon}}
-\renewcommand\soustitre{Rapport de Spécifications}
+\renewcommand\soustitre{Document de Spécifications}
 \renewcommand\infoBig{Projet d'Informatique Répartie}
 \renewcommand\infoSmall{}
 
