--- a/qualite/specifications/3.communication_client_serveur.tex
+++ b/qualite/specifications/3.communication_client_serveur.tex
@@ -1,5 +1,23 @@
-% ============= Communication client-serveur ===============
-\chapter{Communication client-serveur}
-\TODO{Christophe}
+% ============= Communication client-serveur, serveur-client ===============
+\chapter{Communication client-serveur, serveur-client}
+    Comme précisé dans la partie~\ref{sec:principales_technologies}, la communication sera effectuée à l'aide de sockets.
 
-% qu'est ce qu'on envoie entre le client et le serveur, sous quelle forme et pourquoi faire…
+
+    %============== Communication client-serveur ===================
+    \section{Communication client-serveur}
+        Lorsque l'utilisateur appuiera sur le bouton \emph{GO}, l'application cliente se connectera au serveur. Celui si aura une ip publique/fixe afin d'être joignable en permanence.\\
+
+        Si l'utilisateur choisit de jouer à l'aide d'une IA, son programme sera envoyé au serveur pour que celui-ci le compile et l'exécute. Une fois la partie commencée, la communication client-serveur dépend du mode de jeu choisi.
+
+        \paragraph{Mode manuel} Le client communiquera au serveur uniquement les ordres de déplacement entrés à l'aide des touches clavier sous la forme décrite dans la partie \ref{subsec:gestion_deplacements}.
+
+        \paragraph{Mode IA} Le client ne communiquera aucune information au serveur, puisque l'IA de l'utilisateur s'exécutera sur le serveur lui-même. \\
+
+        \emph{Remarque: il a été décidé de compiler et d'exécuter l'IA des utilisateurs sur le serveur afin d'éviter que celui-ci ne doive installer l'environnement nécessaire à la compilation et l'exécution.}
+
+
+    %============== Communication serveur-client ===================
+    \section{Communication serveur-client}
+        Le serveur est responsable de la diffusion de l'information à l'ensemble des clients. La communication serveur-client sera donc élevée. \\
+
+        Une fois le client connecté au serveur, ce dernier lui envoie le labyrinthe sélectionné, le nombre et le pseudo des joueurs de la partie, afin que le client puisse afficher la partie. À chaque réception de déplacement, le serveur analyse la faisabilité du déplacement et envoie à tous les clients la nouvelle position du joueur.
