--- a/qualite/specifications/1.introduction.tex
+++ b/qualite/specifications/1.introduction.tex
@@ -3,50 +3,39 @@
 
 % ----------- Contexte du projet -----------
 \section{Contexte du projet}
-\TODO{Céline}
+    Dans le cadre de notre formation au sein du département Architecture des Systèmes d'Information, un cours d'Informatique Répartie est dispensé. La réalisation d'un projet par groupes de 5 ou 6, au cours du semestre, a pour objectif de concevoir et développer un système réparti permettant de mettre en pratique les connaissances acquises en cours et en TD Machine. Un certain nombre de séances de TD sont dédiées à la réalisation de ce projet mais celui-ci nécessite également une recherche de solutions non-abordées ainsi qu'un travail personnel supplémentaire.
 
-% On est en ASI4, on a cours d'info Rep et on doit faire un projet blablabla…
+    Une soutenance aura lieu, en présence des autres étudiants, composée d'une présentation et d'une démonstration (ou vidéo).
 
-Dans le cadre de notre formation au sein du département Architecture des Systèmes d'Information, un cours d'Informatique Répartie est dispensé. La réalisation d'un projet par groupes de 5 ou 6, au cours du semestre, a pour objectif de concevoir et développer un système réparti permettant de mettre en pratique les connaissances acquises en cours et en TD Machine. Un certain nombre de séances de TD sont dédiées à la réalisation de ce projet mais celui-ci nécessite également une recherche de solutions non-abordées ainsi qu'un travail personnel supplémentaire.
-
-Une soutenance aura lieu, en présence des autres étudiants, composée d'une présentation et d'une démonstration (ou vidéo).
-
-Il est indispensable que la solution mise en place soit une application distribuée. Le présent document de spécifications a valeur contractuelle et doit être respecté pour la suite du projet.
+    Il est indispensable que la solution mise en place soit une application distribuée. Le présent document de spécifications a valeur contractuelle et doit être respecté pour la suite du projet.
 
 % ----------- Principe général -----------
 \section{Principe général}
-\TODO{Céline}
+    L'objectif de notre projet est de développer un serveur de tournois permettant à des IA et à des joueurs humains de s'affronter dans une arène.
 
-% On va faire un super projet de la mort trop cool sur un labyrinthe multijoueur blablabla…
-
-L'objectif de notre projet est de développer un serveur de tournois permettant à des IA et à des joueurs humains de s'affronter dans une arène.
-
-Nous avons choisi de développer un système distribué permettant à des joueurs de s'affronter dans des tournois de labyrinthes. Les joueurs sont placés au centre d'un labyrinthe et doivent en sortir. La partie est terminée lorsque qu'un joueur y parvient. Il est alors déclaré vainqueur.
+    Nous avons choisi de développer un système distribué permettant à des joueurs de s'affronter dans des tournois de labyrinthes. Les joueurs sont placés au centre d'un labyrinthe et doivent en sortir. La partie est terminée lorsque qu'un joueur y parvient. Il est alors déclaré vainqueur.
 
 % ----------- Principales technologies utilisées -----------
 \section{Principales technologies utilisées}
-\TODO{Charlotte}
-\subsection{Choix du langage de programmation}
-Le côté serveur et le côté client seront tous deux codés en \textbf{Java}.
+\label{sec:principales_technologies}
 
-Ce langage a tout d'abord été choisi car c'est celui que tous les membres de l'équipe du projet maîtrisent le mieux. Les difficultés rencontrées ne seront donc pas dues, en théorie, au langage de programmation.
+    \subsection{Choix du langage de programmation}
+        Le côté serveur et le côté client seront tous deux codés en \textbf{Java}.
 
-De plus, un langage orienté objet est adapté à notre projet. Nous pourrions par exemple utiliser un objet Labyrinthe et un objet Joueur. Cela rendra le code ordonné et beaucoup plus compréhensible.
+        Ce langage a tout d'abord été choisi car c'est celui que tous les membres de l'équipe du projet maîtrisent le mieux. Les difficultés rencontrées ne seront donc pas dues, en théorie, au langage de programmation.
 
-\subsection{Communication client-serveur}
-L'échange d'information entre le serveur et les clients se fera à l'aide de \textbf{sockets}.
+        De plus, un langage orienté objet est adapté à notre projet. Nous pourrions par exemple utiliser un objet Labyrinthe et un objet Joueur. Cela rendra le code ordonné et beaucoup plus compréhensible.
 
-Jusqu'à présent, les sockets sont le seul moyen que nous ayons étudié pour faire communiquer un serveur et un client.
+    \subsection{Communication client-serveur}
+        L'échange d'information entre le serveur et les clients se fera à l'aide de \textbf{sockets}.
 
-D'autre part, les sockets sont facilement utilisables en Java à l'aide du package java.net.
+        Jusqu'à présent, les sockets sont le seul moyen que nous ayons étudié pour faire communiquer un serveur et un client.
 
-\subsection{Affichage}
-L'interface utilisateur sera réalisée à l'aide de la bibliothèque Java \textbf{Slick}. Après quelques recherches et en visualisant des exemples d'utilisation de différentes bibliothèques, il s'est avéré que la bibliothèque Slick correspond le mieux à nos attentes.
+        D'autre part, les sockets sont facilement utilisables en Java à l'aide du package java.net.
 
-En effet, nous avons imaginé un labyrinthe sous la forme d'une grille ayant des cases vides là où le joueur peut se déplacer et des cases pleines qui représentent les murs.
+    \subsection{Affichage}
+        L'interface utilisateur sera réalisée à l'aide de la bibliothèque Java \textbf{Slick2D}. Après quelques recherches et en visualisant des exemples d'utilisation de différentes bibliothèques, il s'est avéré que la bibliothèque Slick2D correspond le mieux à nos attentes.
 
-De plus, cette bibliothèque paraît posséder une documentation complète et une communauté assez active, ce qui nous permettra de trouver rapidement des solutions en cas de difficulté.
+        En effet, nous avons imaginé un labyrinthe sous la forme d'une grille ayant des cases vides là où le joueur peut se déplacer et des cases pleines qui représentent les murs.
 
-% Ce que l'on a dit pdt la réunion, java, socket…
-% pourquoi c'est techno
-% avantage/inconvénient
+        De plus, cette bibliothèque paraît posséder une documentation complète et une communauté assez active, ce qui nous permettra de trouver rapidement des solutions en cas de difficulté.
