ajout de précision dans la partie 4

--- a/qualite/specifications/4.gestion_serveur.tex
+++ b/qualite/specifications/4.gestion_serveur.tex
@@ -9,4 +9,4 @@
 
         Au démarrage d'une partie, le serveur choisit au hasard une carte sur laquelle les clients vont jouer et la leur transmet. Une fois que tous les clients ont validé la réception de la carte, le jeu commence. Chaque participant possède un temps limite pour jouer en fonction de sa nature (IA ou Humain). Si un joueur ne joue pas dans le temps imparti, sont tour en passé et le joueur suivant peut jouer.\\
 
-        À chaque tour, le serveur envoie une demande au joueur qui doit jouer. Le client indique alors la direction dans laquelle il souhaite se déplacer. Si le mouvement est validé par le serveur, la nouvelle position est envoyée à tous les participants de la partie.
+        À chaque tour, le serveur envoie une demande au joueur qui doit jouer. Le client indique alors la direction dans laquelle il souhaite se déplacer. Si le mouvement est validé par le serveur, la nouvelle position est envoyée à tous les participants de la partie. Pour éviter un allongement du temps des parties, un nombre maximal de tours sera fixé en fonction de la complexité du labyrinthe.
