Corrections syntaxiques mineures.

--- a/qualite/specifications/2.ihm.tex
+++ b/qualite/specifications/2.ihm.tex
@@ -7,15 +7,15 @@
 
 	La première, à gauche, est la partie où l'utilisateur a la possibilité de développer sa propre Intelligence Artificielle (IA). L'utilisateur doit coder impérativement en Java sinon la compilation ne fonctionnera pas.
 
-	La deuxième, à droite, est la partie liée au jeu. Une description détaillée des régles du jeu figure en haut de l'écran afin que l'utilisateur novice puisse très vite prendre ses marques. Avant de créer ou rejoindre une partie, l'utilisateur doit renseigner un pseudo. Ce pseudo sera son identifiant lors des parties. De plus, il pourra choisir d'envoyer son IA, qu'il aura développé au préalable, dans le labyrinthe ou bien de jouer manuellement au jeu. Une fois que l'utilisateur aura rentré ces paramètres, il peut choisir de rejoindre une partie ou d'en créer une. S'il choisit d'en créer une il devra renseigner le nombre maximum de joueurs que la partie pourra accueillir.
+	La deuxième, à droite, est la partie liée au jeu. Une description détaillée des règles du jeu figure en haut de l'écran afin que l'utilisateur novice puisse très vite prendre ses marques. Avant de créer ou rejoindre une partie, l'utilisateur doit renseigner un pseudo. Ce pseudo sera son identifiant lors des parties. De plus, il pourra choisir d'envoyer son IA, qu'il aura développé au préalable, dans le labyrinthe ou bien de jouer manuellement au jeu. Une fois que l'utilisateur aura rentré ces paramètres, il peut choisir de rejoindre une partie ou d'en créer une. S'il choisit d'en créer une il devra renseigner le nombre maximum de joueurs que la partie pourra accueillir.
 
-	Le choit de jouer avec une IA ou manuellement se fera à l'aide de radios bouttons qui mettra en surbrillance le choix de l'utilisateur.
+	Le choit de jouer avec une IA ou manuellement se fera à l'aide de radios boutons qui mettra en surbrillance le choix de l'utilisateur.
 
 	La figure~\ref{fig:ecran_accueil} représente une maquette de l'écran d'accueil.
 	\begin{figure}[h]
 		\centering
 		\includegraphics[scale=0.2]{images/schema_ecran_accueil.jpg}
-		\caption{Schéma de l'écran d'accueil'}
+		\caption{Schéma de l'écran d'accueil}
 		\label{fig:ecran_accueil}
 	\end{figure}
 
