--- a/qualite/specifications/3.communication_client_serveur.tex
+++ b/qualite/specifications/3.communication_client_serveur.tex
@@ -9,7 +9,7 @@
 
         Si l'utilisateur choisit de jouer à l'aide d'une IA, son programme sera envoyé au serveur pour que celui-ci le compile et l'exécute. Une fois la partie commencée, la communication client-serveur dépend du mode de jeu choisi.
 
-        \paragraph{Mode manuel} Le client communiquera au serveur uniquement les ordres de déplacement entrés à l'aide des touches clavier sous la forme décrite dans la partie \ref{subsec:gestion_deplacements}.
+        \paragraph{Mode manuel} Le client communiquera au serveur uniquement les ordres de déplacement entrés à l'aide des touches clavier sous la forme décrite dans la partie~\ref{subsec:gestion_deplacements}.
 
         \paragraph{Mode IA} Le client ne communiquera aucune information au serveur, puisque l'IA de l'utilisateur s'exécutera sur le serveur lui-même. \\
 
