Redimensionnement des images

--- a/qualite/specifications/2.ihm.tex
+++ b/qualite/specifications/2.ihm.tex
@@ -14,7 +14,7 @@
 	La figure~\ref{fig:ecran_accueil} représente une maquette de l'écran d'accueil.
 	\begin{figure}[h]
 		\centering
-		\includegraphics[scale=0.2]{images/schema_ecran_accueil.jpg}
+		\includegraphics[width=15cm]{images/schema_ecran_accueil.jpg}
 		\caption{Schéma de l'écran d'accueil}
 		\label{fig:ecran_accueil}
 	\end{figure}
@@ -40,7 +40,7 @@
 	\end{itemize}
 	\begin{figure}[h]
 		\centering
-		\includegraphics[scale=0.2]{images/schema_ecran_partie.jpg}
+		\includegraphics[width=15cm]{images/schema_ecran_partie.jpg}
 		\caption{Schéma de l'écran d'une partie}
 		\label{fig:ecran_partie}
 	\end{figure}
