Conception : ajout de la structure du doc et du diagramme des cas d'utilisation

--- a/qualite/conception/conception.tex
+++ b/qualite/conception/conception.tex
@@ -84,13 +84,17 @@ citecolor=black,  %couleur des références
 
 \tableofcontents
 
-%\input{1.introduction.tex}
+\chapter*{Introduction}
+	%\input{1.Introduction.tex}
 
-%\input{2.ihm.tex}
+\chapter{Cas d'utilisation}
+	\input{2.UseCase.tex}
 
-%\input{3.communication_client_serveur.tex}
-
-%\input{4.gestion_serveur.tex}
+\chapter{Diagramme d'interaction}
+	%\input{3.Interaction.tex}
+	
+\chapter{Diagramme de classe}
+	%\input{4.Classes.tex}
 
 
 \end{document}
