Conception : démerdez vous avec l'intro

--- a/qualite/conception/conception.tex
+++ b/qualite/conception/conception.tex
@@ -90,11 +90,11 @@ citecolor=black,  %couleur des références
 \chapter{Cas d'utilisation}
 	\input{2.UseCase.tex}
 
-\chapter{Diagramme d'interaction}
-	%\input{3.Interaction.tex}
+\chapter{Diagramme de séquence}
+	\input{3.Interaction.tex}
 	
 \chapter{Diagramme de classe}
-	%\input{4.Classes.tex}
+	\input{4.Classes.tex}
 
 
 \end{document}
