--- a/qualite/conception/2.UseCase.tex
+++ b/qualite/conception/2.UseCase.tex
@@ -1,28 +1,24 @@
-\section{Diagramme de cas d'utilisation}
+\section{Javabyrinthe}
 
-\begin{figure}[h]%
-	\includegraphics[width=\columnwidth]{images/UML_casUtilisation_Complet.png}%
-	\caption{Diagramme de cas d'utilisation}%
+\begin{figure}[h!]%
+\centering
+	\includegraphics[width=15cm]{images/UML_casUtilisation_Javabyrinthe.png}%
+	\caption{Diagramme de cas d'utilisation : Javabyrinthe}%
+	\label{fig:useCase}%
+\end{figure}
+\newpage
+\section{Jouer}
+\begin{figure}[h!]%
+\centering
+	\includegraphics[width=15cm]{images/UML_casUtilisation_Jouer.png}%
+	\caption{Diagramme de cas d'utilisation : Jouer}%
 	\label{fig:useCase}%
 \end{figure}
 
-\section{Lancer une partie}
-
-\paragraph{Description}
-
-\paragraph{Acteurs}
-
-\paragraph{Pré-conditions}
-
-\paragraph{Démarrage}
-
-\paragraph{Scénario}
-
-\paragraph{Exceptions}
-
-\paragraph{Fin}
-
-\paragraph{Post-conditions}
-
-
-
+\section{LancementJeu}
+\begin{figure}[h!]%
+\centering
+	\includegraphics[width=15cm]{images/UML_casUtilisation_LancementJeu.png}%
+	\caption{Diagramme de cas d'utilisation : Lancement Jeu}%
+	\label{fig:useCase}%
+\end{figure}
