Rédaction de l'intro + relecture

--- a/qualite/conception/2.UseCase.tex
+++ b/qualite/conception/2.UseCase.tex
@@ -1,24 +1,8 @@
-\section{Javabyrinthe}
-
-\begin{figure}[h!]%
-\centering
-	\includegraphics[width=15cm]{images/UML_casUtilisation_Javabyrinthe.png}%
-	\caption{Diagramme de cas d'utilisation : Javabyrinthe}%
-	\label{fig:useCase}%
-\end{figure}
-\newpage
-\section{Jouer}
-\begin{figure}[h!]%
-\centering
-	\includegraphics[width=15cm]{images/UML_casUtilisation_Jouer.png}%
-	\caption{Diagramme de cas d'utilisation : Jouer}%
+\begin{figure}[h]%
+	\includegraphics[width=\columnwidth]{images/UML_casUtilisation_Complet.png}%
+	\caption{Diagramme de cas d'utilisation}%
 	\label{fig:useCase}%
 \end{figure}
 
-\section{LancementJeu}
-\begin{figure}[h!]%
-\centering
-	\includegraphics[width=15cm]{images/UML_casUtilisation_LancementJeu.png}%
-	\caption{Diagramme de cas d'utilisation : Lancement Jeu}%
-	\label{fig:useCase}%
-\end{figure}
+
+
