--- a/qualite/conception/conception.tex
+++ b/qualite/conception/conception.tex
@@ -85,15 +85,15 @@ citecolor=black,  %couleur des références
 \tableofcontents
 
 \chapter*{Introduction}
-	%\input{1.Introduction.tex}
+	\input{1.Introduction.tex}
 
 \chapter{Cas d'utilisation}
 	\input{2.UseCase.tex}
 
-\chapter{Diagramme de séquence}
+\chapter{Diagramme d'interactions}
 	\input{3.Interaction.tex}
-	
-\chapter{Diagramme de classe}
+
+\chapter{Diagramme de classes}
 	\input{4.Classes.tex}
 
 
