--- a/qualite/conception/3.Interaction.tex
+++ b/qualite/conception/3.Interaction.tex
@@ -2,6 +2,6 @@
 
 \begin{figure}[h]%
 	\includegraphics[width=\columnwidth]{images/UML_DiagSequence.png}%
-	\caption{Diagramme de séquence}%
+	\caption{Diagramme d'interaction}%
 	\label{fig:useCase}%
 \end{figure}
