feat(rapport): complete the report architecture

--- a/qualite/rapport/rapport.tex
+++ b/qualite/rapport/rapport.tex
@@ -86,20 +86,23 @@ citecolor=black,  %couleur des références
 
 \chapter*{Introduction}
 	\input{1.Introduction.tex}
-	
+
 \chapter{Document de spécifications mis à jour}
 	\includepdf[pages=-]{specifications.pdf}
-	
+
 \chapter{Document de conception mis à jour}
 	\includepdf[pages=-]{conception.pdf}
 
 \chapter{Choix techniques}
 	\input{2.ChoixTechniques.tex}
 
+\chapter{Problèmes rencontrés \& solutions apportées}
+  \input{3.problemes_solutions.tex}
+
 \chapter{Améliorations possibles}
-	\input{3.Ameliorations.tex}
+	\input{4.Ameliorations.tex}
 
 \chapter{Répartition des tâches}
-	\input{4.Repartition.tex}
+	\input{5.Repartition.tex}
 
 \end{document}
